// Copyright 2023 The Bucketeer Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bucketeer.batch;
option go_package = "github.com/bucketeer-io/bucketeer/proto/batch";

enum BatchJob {
  ExperimentStatusUpdater = 0;
  ExperimentRunningWatcher = 1;
  FeatureStaleWatcher = 2;
  MauCountWatcher = 3;
  DatetimeWatcher = 4;
  EventCountWatcher = 5;
  DomainEventInformer = 6;
  RedisCounterDeleter = 7;
  ProgressiveRolloutWatcher = 8;
  ExperimentCalculator = 9;
}

message BatchJobRequest {
  BatchJob job = 1;
}

message BatchJobResponse {}

service BatchService {
  rpc ExecuteBatchJob(BatchJobRequest) returns (BatchJobResponse) {}
}